src/snapshots/prql__parser__test__parse_to_pest_tree_pipeline.snap
---
source: src/parser.rs
assertion_line: 422
expression: "parse_to_pest_tree(r#\"\n    from employees\n    select [a, b]\n    \"#.trim(),\n                   Rule::pipeline)"

---
Ok(
    [
        Pair {
            rule: pipeline,
            span: Span {
                str: "from employees\n    select [a, b]",
                start: 0,
                end: 32,
            },
            inner: [
                Pair {
                    rule: transformation,
                    span: Span {
                        str: "from employees",
                        start: 0,
                        end: 14,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "from",
                                start: 0,
                                end: 4,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "employees",
                                start: 5,
                                end: 14,
                            },
                            inner: [],
                        },
                    ],
                },
                Pair {
                    rule: transformation,
                    span: Span {
                        str: "select [a, b]",
                        start: 19,
                        end: 32,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "select",
                                start: 19,
                                end: 25,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: list,
                            span: Span {
                                str: "[a, b]",
                                start: 26,
                                end: 32,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "a",
                                        start: 27,
                                        end: 28,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "b",
                                        start: 30,
                                        end: 31,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
)
