src/snapshots/prql__parser__test__parse_to_pest_tree_query-2.snap
---
source: src/parser.rs
assertion_line: 338
expression: "parse_to_pest_tree(r#\"\n    from employees\n    filter country = \"USA\"\n    \"#,\n                   Rule::query)"

---
Ok(
    [
        Pair {
            rule: pipeline,
            span: Span {
                str: "from employees\n    filter country = \"USA\"",
                start: 5,
                end: 46,
            },
            inner: [
                Pair {
                    rule: transformation,
                    span: Span {
                        str: "from employees",
                        start: 5,
                        end: 19,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "from",
                                start: 5,
                                end: 9,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "employees",
                                start: 10,
                                end: 19,
                            },
                            inner: [],
                        },
                    ],
                },
                Pair {
                    rule: transformation,
                    span: Span {
                        str: "filter country = \"USA\"",
                        start: 24,
                        end: 46,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "filter",
                                start: 24,
                                end: 30,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "country",
                                start: 31,
                                end: 38,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: operator,
                            span: Span {
                                str: "=",
                                start: 39,
                                end: 40,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: string,
                            span: Span {
                                str: "\"USA\"",
                                start: 41,
                                end: 46,
                            },
                            inner: [],
                        },
                    ],
                },
            ],
        },
        Pair {
            rule: EOI,
            span: Span {
                str: "",
                start: 51,
                end: 51,
            },
            inner: [],
        },
    ],
)
