src/snapshots/prql__parser__test__parse_tree_of_str_pipeline-2.snap
---
source: src/parser.rs
assertion_line: 745
expression: "parse_tree_of_str(r#\"\n    from employees\n    filter country = \"USA\"\n    \"#.trim(),\n    Rule::pipeline)"

---
Ok(
    [
        Pair {
            rule: pipeline,
            span: Span {
                str: "from employees\n    filter country = \"USA\"",
                start: 0,
                end: 41,
            },
            inner: [
                Pair {
                    rule: transformation,
                    span: Span {
                        str: "from employees",
                        start: 0,
                        end: 14,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "from",
                                start: 0,
                                end: 4,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: expr,
                            span: Span {
                                str: "employees",
                                start: 5,
                                end: 14,
                            },
                            inner: [
                                Pair {
                                    rule: items,
                                    span: Span {
                                        str: "employees",
                                        start: 5,
                                        end: 14,
                                    },
                                    inner: [
                                        Pair {
                                            rule: ident,
                                            span: Span {
                                                str: "employees",
                                                start: 5,
                                                end: 14,
                                            },
                                            inner: [],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
                Pair {
                    rule: transformation,
                    span: Span {
                        str: "filter country = \"USA\"",
                        start: 19,
                        end: 41,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "filter",
                                start: 19,
                                end: 25,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: expr,
                            span: Span {
                                str: "country = \"USA\"",
                                start: 26,
                                end: 41,
                            },
                            inner: [
                                Pair {
                                    rule: items,
                                    span: Span {
                                        str: "country ",
                                        start: 26,
                                        end: 34,
                                    },
                                    inner: [
                                        Pair {
                                            rule: ident,
                                            span: Span {
                                                str: "country",
                                                start: 26,
                                                end: 33,
                                            },
                                            inner: [],
                                        },
                                    ],
                                },
                                Pair {
                                    rule: operator,
                                    span: Span {
                                        str: "=",
                                        start: 34,
                                        end: 35,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: items,
                                    span: Span {
                                        str: "\"USA\"",
                                        start: 36,
                                        end: 41,
                                    },
                                    inner: [
                                        Pair {
                                            rule: string_literal,
                                            span: Span {
                                                str: "\"USA\"",
                                                start: 36,
                                                end: 41,
                                            },
                                            inner: [
                                                Pair {
                                                    rule: string,
                                                    span: Span {
                                                        str: "USA",
                                                        start: 37,
                                                        end: 40,
                                                    },
                                                    inner: [],
                                                },
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
)
